more spacing fixes

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -48,7 +48,8 @@
 
     &.mobile {
       display: block;
-      width: 120px;
+      width: 30%;
+      margin: rem(20px) 0;
       padding-left: 1rem;
       @include media($medium-screen-up) {
         display: none;
@@ -57,9 +58,12 @@
   }
 
   .header-links {
-    margin: rem(30px) 0;
+    margin: rem(20px) 0;
     height: rem(40px);
     float: right;
+    @include media($medium-screen-up) {
+      margin: rem(30px) 0;
+    };
   }
 
   .header-link {
@@ -110,7 +114,7 @@ button.sidebar-toggle {
 
 .menu-icon {
   display: block;
-  width: 40px;
+  width: 30px;
   cursor: pointer;
   @include vendor(transform, translate3d(0,-50%,0));
 
